# bundesrat-api

./: CNAME  README.md  generator_config.yaml  index.html  openapi.yaml
python-client/: README.md  pyproject.toml
python-client/.openapi-generator/: FILES
python-client/deutschland/bundesrat/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
python-client/deutschland/bundesrat/api/: default_api.py
python-client/deutschland/bundesrat/model/: __init__.py
python-client/sphinx-docs/: conf.py  index.rst
python-client/sphinx-docs/source/: modules.rst
python-client/test/: test_default_api.py
